--- a/page/templates/page/sample.html
+++ b/page/templates/page/sample.html
@@ -13,6 +13,7 @@
                   <span class="section-heading-lower">{{page.title}}</span>
                 </h2>
                 <div class="section-content">
+                    <!-- |linebreaks sirve para dar un salto-->
                     {{page.content|safe}}
                     <!--Si el usuario está autentificado-->
                     {%if user.is_authenticated%}
